--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header center">
         <div class="header__logo">
             <a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="5em" height="70" viewBox="0 0 68 70" fill="none">
+                <svg xmlns="http://www.w3.org/2000/svg" width="68" height="70" viewBox="0 0 68 70" fill="none">
                     <path
                         d="M32.8413 5.72651C31.9773 6.01322 31.2951 6.6842 30.994 7.54326L9.18696 69.7652H3.7105C1.43629 69.7652 -0.133714 67.4882 0.674942 65.3626L24.6661 2.3008C25.1931 0.915602 26.521 0 28.0031 0H31.9159C35.2511 0 36.0067 4.67606 32.8413 5.72651ZM53.8197 69.7652C52.0019 69.7652 50.3784 68.6277 49.7577 66.9191L27.9355 6.84758C27.7752 6.40623 27.6879 5.94169 27.677 5.47225L27.6526 4.42202C27.5963 1.99658 29.5471 0 31.9732 0H37.6343C39.3707 0 40.9385 1.03924 41.6147 2.63855L67.4608 63.7603C68.6656 66.6097 66.5739 69.7652 63.4803 69.7652H53.8197ZM34.5482 43.9387C38.8885 43.9387 40.5203 49.6204 36.8414 51.9235L30.9006 55.6427L9.18696 69.7652L11.55 47.7982C11.7862 45.6029 13.6391 43.9387 15.847 43.9387H34.5482Z"
                         fill="#DFB600" />
@@ -44,7 +44,7 @@
                 <source media="(max-width: 768px)" srcset="img/mobile/banner1.png">
                 <img class="application__baner baner" src="img/banner1.png" alt="baner">
             </picture>
-            
+
         </div>
     </section>
     <section id="about" class="about center">
@@ -85,9 +85,9 @@
             с&nbsp;другом, ходим на&nbsp;лекции и&nbsp;сотрудничаем с&nbsp;лидерами российского дизайна.
         </p>
     </section>
-    <section id="services" class="services">
+    <section id="services" class="services center">
         <h2 class="services__title title">УСЛУГИ</h2>
-        <div class="services__flex">
+        <div class="services__flex ">
             <div class="services__flex-box"></div>
             <a class="services__details" href="services.html">Подробнее...</a>
         </div>
