new burger menu

--- a/call_reques.html
+++ b/call_reques.html
@@ -10,7 +10,7 @@
     <title>YellowArt</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="script/input_mask.js" defer></script>
-    <!-- <script src="script/burger.js" defer></script> -->
+    <script src="script/burger.js" defer></script>
 </head>
 
 <body>
@@ -24,13 +24,13 @@
                 </svg>
             </a>
         </div>
-        <details class="hamburger">
-            <summary class="hamburger__button"> 
+        <div class="hamburger">
+            <batton class="hamburger__button"> 
                 <svg class="ham4" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
                     <path class="top" d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20" />
                     <path class="middle" d="m 70,50 h -40" />
                     <path class="bottom" d="m 30,67 h 40 c 0,0 8.5,0.149796 8.5,-8.5 0,-8.649796 -8.5,-8.5 -8.5,-8.5 h -20 v 20" />
-                </svg></summary>
+                </svg></batton>
             <div class="hamburger__nav">
                 <nav class="hamburger__links">
                 <a href="index.html#about" class="header__link">О нас</a>
@@ -38,7 +38,7 @@
                 <a href="index.html#services" class="header__link">Услуги</a>
             </nav>
             </div>
-        </details >
+        </div >
         <nav class="header__navbar">
 <a href="index.html#about" class="header__link">О нас</a>
 <a href="index.html#portfolio" class="header__link">Портфолио</a>
