--- a/services.html
+++ b/services.html
@@ -27,10 +27,10 @@
         </div>
         <div class="hamburger">
             <batton class="hamburger__button"> 
-                <svg class="ham4" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
-                    <path class="top" d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20" />
-                    <path class="middle" d="m 70,50 h -40" />
-                    <path class="bottom" d="m 30,67 h 40 c 0,0 8.5,0.149796 8.5,-8.5 0,-8.649796 -8.5,-8.5 -8.5,-8.5 h -20 v 20" />
+                <svg class="ham2" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
+                    <path class="top" d="m 70,33 h -40 c -6.5909,0 -7.763966,-4.501509 -7.763966,-7.511428 0,-4.721448 3.376452,-9.583771 13.876919,-9.583771 14.786182,0 11.409257,14.896182 9.596449,21.970818 -1.812808,7.074636 -15.709402,12.124381 -15.709402,12.124381" />
+                    <path class="middle" d="m 30,50 h 40" />
+                    <path class="bottom" d="m 70,67 h -40 c -6.5909,0 -7.763966,4.501509 -7.763966,7.511428 0,4.721448 3.376452,9.583771 13.876919,9.583771 14.786182,0 11.409257,-14.896182 9.596449,-21.970818 -1.812808,-7.074636 -15.709402,-12.124381 -15.709402,-12.124381" />
                 </svg></batton>
             <div class="hamburger__nav">
                 <nav class="hamburger__links">
