--- a/call_reques.html
+++ b/call_reques.html
@@ -33,9 +33,9 @@
                 </svg></batton>
             <div class="hamburger__nav">
                 <nav class="hamburger__links">
-                <a href="index.html#about" class="header__link">О нас</a>
-                <a href="index.html#portfolio" class="header__link">Портфолио</a>
-                <a href="index.html#services" class="header__link">Услуги</a>
+                <a href="index.html#about" class="hamburger__link">О нас</a>
+                <a href="index.html#portfolio" class="hamburger__link">Портфолио</a>
+                <a href="index.html#services" class="hamburger__link">Услуги</a>
             </nav>
             </div>
         </div >
