--- a/call_reques.html
+++ b/call_reques.html
@@ -25,24 +25,27 @@
             </a>
         </div>
         <div class="hamburger">
-            <batton class="hamburger__button"> 
+            <batton class="hamburger__button">
                 <svg class="ham2" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
-                    <path class="top" d="m 70,33 h -40 c -6.5909,0 -7.763966,-4.501509 -7.763966,-7.511428 0,-4.721448 3.376452,-9.583771 13.876919,-9.583771 14.786182,0 11.409257,14.896182 9.596449,21.970818 -1.812808,7.074636 -15.709402,12.124381 -15.709402,12.124381" />
+                    <path class="top"
+                        d="m 70,33 h -40 c -6.5909,0 -7.763966,-4.501509 -7.763966,-7.511428 0,-4.721448 3.376452,-9.583771 13.876919,-9.583771 14.786182,0 11.409257,14.896182 9.596449,21.970818 -1.812808,7.074636 -15.709402,12.124381 -15.709402,12.124381" />
                     <path class="middle" d="m 30,50 h 40" />
-                    <path class="bottom" d="m 70,67 h -40 c -6.5909,0 -7.763966,4.501509 -7.763966,7.511428 0,4.721448 3.376452,9.583771 13.876919,9.583771 14.786182,0 11.409257,-14.896182 9.596449,-21.970818 -1.812808,-7.074636 -15.709402,-12.124381 -15.709402,-12.124381" />
-                </svg></batton>
+                    <path class="bottom"
+                        d="m 70,67 h -40 c -6.5909,0 -7.763966,4.501509 -7.763966,7.511428 0,4.721448 3.376452,9.583771 13.876919,9.583771 14.786182,0 11.409257,-14.896182 9.596449,-21.970818 -1.812808,-7.074636 -15.709402,-12.124381 -15.709402,-12.124381" />
+                </svg>
+            </batton>
             <div class="hamburger__nav">
                 <nav class="hamburger__links">
-                <a href="index.html#about" class="hamburger__link">О нас</a>
-                <a href="index.html#portfolio" class="hamburger__link">Портфолио</a>
-                <a href="index.html#services" class="hamburger__link">Услуги</a>
-            </nav>
+                    <a href="index.html#about" class="hamburger__link">О нас</a>
+                    <a href="index.html#portfolio" class="hamburger__link">Портфолио</a>
+                    <a href="index.html#services" class="hamburger__link">Услуги</a>
+                </nav>
             </div>
-        </div >
+        </div>
         <nav class="header__navbar">
-<a href="index.html#about" class="header__link">О нас</a>
-<a href="index.html#portfolio" class="header__link">Портфолио</a>
-<a href="index.html#services" class="header__link">Услуги</a>
+            <a href="index.html#about" class="header__link">О нас</a>
+            <a href="index.html#portfolio" class="header__link">Портфолио</a>
+            <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
         <div class="header__call-reques-btn">
             <a href="index.html" class="header__btn"><svg width="59" height="63" viewBox="0 0 59 63" fill="none"
@@ -83,7 +86,8 @@
     <footer class="footer center">
         <div class="footer__contact">
             <div class="footer__contact-tel">
-                <svg class="footer__tel" xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39" fill="none">
+                <svg class="footer__tel" xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39"
+                    fill="none">
                     <path
                         d="M1.52575 1.87461L10.0568 0.0465259C10.9838 -0.151517 11.9353 0.297888 12.3126 1.10529L16.2501 9.63636C16.5946 10.3828 16.3649 11.2588 15.6841 11.7691L10.7131 15.5472C13.6661 21.3894 18.8258 26.2491 25.2487 29.0445L29.3174 24.4286C29.8752 23.7964 30.8103 23.5831 31.6142 23.9031L40.8015 27.5592C41.6792 27.9172 42.1632 28.8008 41.9499 29.6615L39.9812 37.5832C39.7761 38.4059 38.9887 39 38.0617 39C17.0539 39 0 23.1947 0 3.657C0 2.80389 0.63163 2.06504 1.52575 1.87461Z"
                         fill="#DFB600" />
