update nav footer

--- a/call_reques.html
+++ b/call_reques.html
@@ -39,14 +39,14 @@
                 <nav class="hamburger__links">
                     <a href="index.html#about" class="hamburger__link">О нас</a>
                     <a href="index.html#portfolio" class="hamburger__link">Портфолио</a>
-                    <a href="index.html#services" class="hamburger__link">Услуги</a>
+                    <a href="services.html" class="hamburger__link">Услуги</a>
                 </nav>
             </div>
         </div>
         <nav class="header__navbar">
             <a href="index.html#about" class="header__link">О нас</a>
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
-            <a href="index.html#services" class="header__link">Услуги</a>
+            <a href="services.html" class="header__link">Услуги</a>
         </nav>
         <div class="header__call-reques-btn">
             <a href="index.html" class="header__btn"><svg width="59" height="63" viewBox="0 0 59 63" fill="none"
