--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             </batton>
             <div class="hamburger__nav">
                 <nav class="hamburger__links">
-                    <a href="index.html#about" class="hamburger__link">О нас</a>
-                    <a href="index.html#portfolio" class="hamburger__link">Портфолио</a>
-                    <a href="index.html#services" class="hamburger__link">Услуги</a>
+                    <a href="#about" class="hamburger__link">О нас</a>
+                    <a href="#portfolio" class="hamburger__link">Портфолио</a>
+                    <a href="services.html" class="hamburger__link">Услуги</a>
                 </nav>
             </div>
         </div>
         <nav class="header__navbar">
             <a href="#about" class="header__link">О нас</a>
             <a href="#portfolio" class="header__link">Портфолио</a>
-            <a href="#services" class="header__link">Услуги</a>
+            <a href="services.html" class="header__link">Услуги</a>
         </nav>
         <div class="header__call-reques-btn">
             <a href="call_reques.html" class="header__btn">Оставить заявку</a>
