--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
         <div class="application__right">
             <picture>
                 <source media="(max-width: 768px)" srcset="img/mobile/banner1.png">
-                <img class="application__baner baner" src="img/banner1.png" alt="baner">
+                <img class="application__banner banner" src="img/banner1.png" alt="banner">
             </picture>
-
         </div>
     </section>
     <section id="about" class="about center">
         <h2 class="title">О НАС</h2>
         <div class="about__box">
             <div class="about__box-left">
-                <img class="about__baner baner" src="img/banner2.png" alt="baner">
+                <img class="about__banner banner" src="img/banner2.png" alt="banner">
             </div>
             <div class="about__box-right">
                 <p class="about__desc">Дизайн-студия интерьеров YellowArt разработает эксклюзивный дизайн интерьера
@@ -108,7 +107,7 @@
     <section id="services" class="services center">
         <h2 class="services__title title">УСЛУГИ</h2>
         <div class="services__flex ">
-            <div class="services__flex-box"></div>
+            <div class="services__grid-box"></div>
             <a class="services__details" href="services.html">Подробнее...</a>
         </div>
     </section>
