--- a/call_reques.html
+++ b/call_reques.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
