create meta description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YellowArt</title>
+    <meta name="description" content="YellowArt - профессиональный дизайн интерьера под ключ. Наша команда поможет воплотить ваши мечты в реальность, предоставляя полный цикл услуг, включая ремонт и перепланировку. Создайте дизайн-проект квартиры или офиса вместе с нами.">
     <link rel="stylesheet" href="css/style.css">
     <script src="script/team.js" async></script>
     <script type="module" src="script/list_services.js"></script>
