--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Услуги</title>
+    <meta name="description" content="Нужно реализовать проект квартиры под ключ? Обращайтесь в дизайн-студию YellowArt – у нас работают дизайнеры интерьеров, проектировщик, инженер, визуализатор. Предоставляем полный цикл услуг, включая ремонт и перепланировку.">
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="script/list_services.js"></script>
     <script type="module" src="script/services_page.js"></script>
