--- a/call_reques.html
+++ b/call_reques.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YellowArt</title>
+    <meta name="description" content="Нужно реализовать проект квартиры под ключ? Обращайтесь в дизайн-студию YellowArt – у нас работают дизайнеры интерьеров, проектировщик, инженер, визуализатор.">
     <link rel="stylesheet" href="css/style.css">
     <script src="script/input_mask.js" defer></script>
     <script src="script/burger.js" defer></script>
